--- a/angular.json
+++ b/angular.json
@@ -27,7 +27,9 @@
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+              "./node_modules/keycloak-js/dist/keycloak.min.js"
+            ]
           },
           "configurations": {
             "production": {
@@ -93,7 +95,9 @@
               "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+
+            ]
           }
         },
         "lint": {
