--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "@ng-bootstrap/ng-bootstrap": "1.0.0",
     "bootstrap": "^4.3.1",
     "hammerjs": "^2.0.8",
+    "keycloak-js": "^9.0.0",
     "ngx-mat-select-search": "^2.1.1",
+    "ngx-material-file-input": "^2.1.0",
     "rxjs": "~6.4.0",
     "rxjs-compat": "^6.5.4",
     "tslib": "^1.10.0",
